# turbopi_ros

./: CMakeLists.txt  README.md  package.xml  rpi5-ubuntu-jammy-setup.sh
config/: nav2_params.yaml  slam_toolbox.yaml  turbopi.rviz  turbopi_controllers.yaml  turbopi_depth.rviz
description/: ros2_control.xacro  turbopi.urdf.xacro  turbopi_core.xacro
etc/systemd/system/: ds4-autoconnect.service  ds4-autoconnect.sh  install_ds4_autoconnect.sh
etc/udev/: 99-ds4-bluetooth.rules  99-rplidar.rules  99-ttyACM0.rules  99-ttyAMA-rrc.rules  99-video.rules  install_udev_rules.sh
include/: battery.hpp  battery_node.hpp  board.hpp  joint.hpp  teleop_turbopi.hpp  turbopi.hpp  turbopi_hardware_interface.hpp
launch2/: nav2.launch.py  turbopi_ros.launch.py
src/: battery.cpp  battery_node.cpp  board.cpp  joint.cpp  teleop_turbopi.cpp  turbopi.cpp  turbopi_hardware_interface.cpp
src/tests/: sniff_serial.py  test_battery.cpp  test_board.py
